--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==2.1.0
-Flask-Login==0.6.2
+Flask==2.0.3
+Werkzeug==2.0.3
+gunicorn==20.1.0
 google-auth==2.16.0
 google-auth-oauthlib==1.0.0
 google-api-python-client==2.86.0
 python-dotenv==0.19.0
-gunicorn==20.1.0
+flask-login==0.6.2
